--- a/Noise/Noise/Presentation/Base.lproj/Main.storyboard
+++ b/Noise/Noise/Presentation/Base.lproj/Main.storyboard
@@ -18,8 +18,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PSi-bI-rvY">
+                                <rect key="frame" x="0.0" y="74" width="375" height="35"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d5x-Bl-MVC">
+                                        <rect key="frame" x="324" y="0.0" width="35" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="35" id="mFL-nj-nlo"/>
+                                            <constraint firstAttribute="height" constant="35" id="tcg-ZZ-wKs"/>
+                                        </constraints>
+                                        <color key="tintColor" red="0.1843137255" green="0.76470588240000004" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" image="ic_play_round">
+                                            <color key="titleColor" red="0.1843137255" green="0.76470588240000004" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="playPauseButtonPressed:" destination="gLJ-OC-Juf" eventType="touchUpInside" id="tBZ-7V-exR"/>
+                                            <action selector="playPauseButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="u8R-cj-SQV"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="d5x-Bl-MVC" firstAttribute="top" secondItem="PSi-bI-rvY" secondAttribute="top" id="9hF-Sr-r1D"/>
+                                    <constraint firstAttribute="trailing" secondItem="d5x-Bl-MVC" secondAttribute="trailing" constant="16" id="ebq-r1-qxd"/>
+                                    <constraint firstAttribute="height" constant="35" id="ufo-J6-Jx1"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Preview All Sounds" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fcP-gf-Os2">
+                                <rect key="frame" x="16" y="80" width="359" height="23"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ePM-VX-fPx">
-                                <rect key="frame" x="0.0" y="74" width="375" height="484"/>
+                                <rect key="frame" x="0.0" y="119" width="375" height="439"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="QcX-af-7hf">
                                     <rect key="frame" x="0.0" y="148" width="375" height="98"/>
@@ -122,7 +154,7 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sounds" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6f-aA-Uac">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Noise" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6f-aA-Uac">
                                 <rect key="frame" x="16" y="30" width="292" height="34"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                 <nil key="textColor"/>
@@ -140,24 +172,31 @@
                         <constraints>
                             <constraint firstItem="OxZ-HI-F5K" firstAttribute="leading" secondItem="J6f-aA-Uac" secondAttribute="trailing" constant="16" id="4m7-wr-I8i"/>
                             <constraint firstItem="ePM-VX-fPx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="-60" id="HBv-BO-0AD"/>
+                            <constraint firstItem="ePM-VX-fPx" firstAttribute="top" secondItem="PSi-bI-rvY" secondAttribute="bottom" constant="10" id="Kw8-fL-tfL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PSi-bI-rvY" secondAttribute="trailing" id="M2C-iU-cF8"/>
+                            <constraint firstItem="PSi-bI-rvY" firstAttribute="top" secondItem="J6f-aA-Uac" secondAttribute="bottom" constant="10" id="Noe-pI-RVe"/>
                             <constraint firstItem="ePM-VX-fPx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Pmu-nx-MEO"/>
                             <constraint firstItem="ePM-VX-fPx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="PwT-tX-Rio"/>
+                            <constraint firstItem="fcP-gf-Os2" firstAttribute="centerY" secondItem="d5x-Bl-MVC" secondAttribute="centerY" id="Q17-my-xep"/>
                             <constraint firstItem="J6f-aA-Uac" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="Qew-bz-4CQ"/>
+                            <constraint firstItem="fcP-gf-Os2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="TQS-fM-MpZ"/>
+                            <constraint firstItem="PSi-bI-rvY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Xuw-pT-Ee4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OxZ-HI-F5K" secondAttribute="trailing" constant="16" id="ZCs-I6-VKP"/>
                             <constraint firstItem="OxZ-HI-F5K" firstAttribute="centerY" secondItem="J6f-aA-Uac" secondAttribute="centerY" id="avI-ak-A3x"/>
-                            <constraint firstItem="ePM-VX-fPx" firstAttribute="top" secondItem="J6f-aA-Uac" secondAttribute="bottom" constant="10" id="bnN-Zh-j6N"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fcP-gf-Os2" secondAttribute="trailing" id="ifd-KQ-cxd"/>
                             <constraint firstItem="J6f-aA-Uac" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="sFe-Ou-xO5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Sounds" image="ic_noise" id="xhh-L4-yMz"/>
                     <connections>
+                        <outlet property="playPauseButton" destination="d5x-Bl-MVC" id="kDn-ex-aab"/>
                         <outlet property="tableView" destination="ePM-VX-fPx" id="Cag-KZ-ueo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1102" y="133"/>
+            <point key="canvasLocation" x="1101.5999999999999" y="132.68365817091455"/>
         </scene>
         <!--Noise Preview View Controller-->
         <scene sceneID="oHO-k3-miN">
@@ -595,7 +634,7 @@
                                                     <constraint firstAttribute="height" constant="35" id="q2W-c2-YCi"/>
                                                 </constraints>
                                                 <color key="tintColor" red="0.1843137255" green="0.76470588240000004" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
-                                                <state key="normal" image="ic_play">
+                                                <state key="normal" image="ic_play_round">
                                                     <color key="titleColor" red="0.1843137255" green="0.76470588240000004" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
                                                 <connections>
@@ -1663,7 +1702,7 @@ Below you can find the licenses to all third-party resources used in this app. C
         <image name="ic_chevron_right" width="75" height="75"/>
         <image name="ic_mixtape" width="75" height="75"/>
         <image name="ic_noise" width="75" height="75"/>
-        <image name="ic_play" width="54" height="54"/>
+        <image name="ic_play_round" width="75" height="75"/>
         <image name="ic_settings" width="75" height="75"/>
         <image name="ic_sound_full" width="75" height="75"/>
         <image name="ic_sound_mute" width="75" height="75"/>
